feat: Add total_count to search and public versions endpoint
